# src/routes/authRoutes.js
@@ -9,7 +9,7 @@ router.get('/google', passport.authenticate('google', { scope: ['profile', 'emai
 router.get('/google/callback',
   passport.authenticate('google', { failureRedirect: '/' }),
   (req, res) => {
-    res.redirect('/protected'); // or frontend
+    res.redirect('/api-docs'); // or frontend
   }
 );
 
